--- a/docker_compose_production.yml
+++ b/docker_compose_production.yml
@@ -1,13 +1,10 @@
 version: "3.8"
-#
+
 volumes:
   vol-emqx-data:
     name: foo-emqx-data
-  #  vol-emqx-etc:
-  #    name: foo-emqx-etc
   vol-emqx-log:
     name: foo-emqx-log
-#
 
 services:
   node:
@@ -22,7 +19,7 @@ services:
       - "3001:3001"
       - "80:3002"
 
-    link:
+    links:
       - emqx
       - mongo
 
@@ -54,10 +51,7 @@ services:
 
     volumes:
       - vol-emqx-data:/opt/emqx/data
-      #   - vol-emqx-etc:/opt/emqx/etc
       - vol-emqx-log:/opt/emqx/log
-      - :/app/index.js
-    #
 
     links:
       - mongo
