--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -26,7 +26,8 @@ services:
       - mongo
 
     #command: sh -c "npm run build && npm run start"
-    command: sh -c "npm install"
+    #command: sh -c "npm install"
+    command: sh -c "node index.js"
 
   mongo:
     container_name: mongo
