--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,11 @@ version: "3.8"
 volumes:
   vol-emqx-data:
     name: foo-emqx-data
-#  vol-emqx-etc:
-#    name: foo-emqx-etc
+  #  vol-emqx-etc:
+  #    name: foo-emqx-etc
   vol-emqx-log:
     name: foo-emqx-log
 #
-
-
 services:
   mongo:
     container_name: mongo
@@ -37,16 +35,18 @@ services:
 
     volumes:
       - vol-emqx-data:/opt/emqx/data
+      #   - vol-emqx-etc:/opt/emqx/etc
       - vol-emqx-log:/opt/emqx/log
+    #
 
     links:
       - mongo
 
     extra_hosts:
-      - "localhost:192.168.0.6"
+      - "localhost:192.168.0.172"
 
     environment:
-      EMQX_NAME: ioticos-gl
+      EMQX_NAME: datalogger
       EMQX_HOST: 127.0.0.1
 
       TZ: "${TZ}"
@@ -72,7 +72,7 @@ services:
       EMQX_AUTH__MONGO__PASSWORD: "${MONGO_PASSWORD}"
       EMQX_AUTH__MONGO__AUTH_SOURCE: admin
 
-      EMQX_AUTH__MONGO__DATABASE: "ioticos_god_level"
+      EMQX_AUTH__MONGO__DATABASE: "Datalogger"
       EMQX_AUTH__MONGO__AUTH_QUERY__COLLECTION: "emqxauthrules"
 
       EMQX_AUTH__MONGO__SUPER_QUERY__COLLECTION: "emqxauthrules"
