--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,3 +93,5 @@ services:
       EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_auth_mongo"
 
       EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 1000
+
+      #prueba
