--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -49,6 +49,7 @@ services:
     ports:
       - 18083:18083
       - 1883:1883
+      - 8883:8883
       - 8083:8083
       - 8085:8081
 
@@ -63,7 +64,7 @@ services:
       - "localhost:192.168.0.172"
 
     environment:
-      EMQX_NAME: ioticos-gl
+      EMQX_NAME: datalogger
       EMQX_HOST: 127.0.0.1
 
       TZ: "${TZ}"
@@ -89,7 +90,7 @@ services:
       EMQX_AUTH__MONGO__PASSWORD: "${MONGO_PASSWORD}"
       EMQX_AUTH__MONGO__AUTH_SOURCE: admin
 
-      EMQX_AUTH__MONGO__DATABASE: "ioticos_god_level"
+      EMQX_AUTH__MONGO__DATABASE: "Datalogger"
       EMQX_AUTH__MONGO__AUTH_QUERY__COLLECTION: "emqxauthrules"
 
       EMQX_AUTH__MONGO__SUPER_QUERY__COLLECTION: "emqxauthrules"
