--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
 
       TZ: "${TZ}"
 
-      # DEFAULT DASH PASS
+      # DEFAULT DASH PASS nico
       EMQX_DASHBOARD__DEFAULT_USER__PASSWORD: "${EMQX_DEFAULT_USER_PASSWORD}"
 
       # DEFAULT APP SECRET
